[gd_scene load_steps=7 format=3 uid="uid://k22gr7f4wll1"]

[ext_resource type="Script" uid="uid://vl3d12fohd5t" path="res://scripts/exits.gd" id="1_8rhte"]
[ext_resource type="TileSet" uid="uid://o3msp0leienr" path="res://assets/tiles.tres" id="2_l6jm1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7q7xg"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rhte"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6jm1"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_im0sc"]
size = Vector2(16, 32)

[node name="Exits" type="Node2D"]
script = ExtResource("1_8rhte")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, -152)

[node name="TopCollison" type="CollisionShape2D" parent="Top"]
shape = SubResource("RectangleShape2D_7q7xg")

[node name="TopTileMap" type="TileMapLayer" parent="Top"]
position = Vector2(0, 8)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0, 0, 0, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0)
tile_set = ExtResource("2_l6jm1")

[node name="Right" type="Area2D" parent="."]
position = Vector2(169, -3)

[node name="RightCollison" type="CollisionShape2D" parent="Right"]
position = Vector2(-17, 3)
shape = SubResource("RectangleShape2D_8rhte")

[node name="RightTileMap" type="TileMapLayer" parent="Right"]
position = Vector2(-9, 3)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 8, 0, 1, 0, 0, 0)
tile_set = ExtResource("2_l6jm1")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 152)

[node name="BottomCollision" type="CollisionShape2D" parent="Bottom"]
shape = SubResource("RectangleShape2D_l6jm1")

[node name="BottomTileMap" type="TileMapLayer" parent="Bottom"]
position = Vector2(0, 8)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0, 0, 0, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0)
tile_set = ExtResource("2_l6jm1")

[node name="Left" type="Area2D" parent="."]
position = Vector2(-152, 0)

[node name="LeftCollison" type="CollisionShape2D" parent="Left"]
shape = SubResource("RectangleShape2D_im0sc")

[node name="LeftTileMap" type="TileMapLayer" parent="Left"]
position = Vector2(-8, 16)
tile_map_data = PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 8, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 8, 0, 1, 0, 0, 0)
tile_set = ExtResource("2_l6jm1")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
